adding database disconnect fixing